--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Profile Bootstrap Theme</title>
+    <title>Ryo Suzuki</title>
 
     <!-- Global stylesheets -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -71,8 +71,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
           <div class="my-auto" >
               <img src="img/logo-s.png" class="img-fluid mb-3" alt="">
-              <h1 class="mb-0">Johndon
-                <span class="text-primary">Bonsen</span>
+              <h1 class="mb-0">Ryo
+                <span class="text-primary">Suzuki</span>
               </h1>
               <div class="subheading mb-5">THE NEXT BIG IDEA IS WAITING FOR ITS NEXT BIG CHANGER WITH 
                   <a href="#">THEMSBIT</a>
